--- a/myCRM/views/index.erb
+++ b/myCRM/views/index.erb
@@ -1,1 +1,9 @@
-<h1>hello world</h1>
+<h1>Login Page</h1>
+
+<form action="/" method="post">
+        <label for="">Email: </label>
+        <input type="text" name="email">
+        <label for="">Password: </label>
+        <input type="password" name="password">
+        <button>Login</button>
+    </form>
