--- a/myCRM/views/layout.erb
+++ b/myCRM/views/layout.erb
@@ -9,6 +9,12 @@
 </head>
 <body>
 
+  <% if logged_in? %>
+    <p> Logged in as: <%= current_user['name']%></p>
+    <p> User ID: <%= current_user['id']%></p>
+  <% end %>
+
+
   <%= yield %>
 
 </body>
