push with Kasun

--- a/myCRM/views/Engineer/index.erb
+++ b/myCRM/views/Engineer/index.erb
@@ -1,7 +1,7 @@
 <h1>Engineer Index's page</h1>
 
 
-<a href="/Engineer/new">Create a new report</a><br>
+<a href="/Engineer/new/records">Create a new report</a><br>
 
 
 
