--- a/myCRM/views/IT/index.erb
+++ b/myCRM/views/IT/index.erb
@@ -17,6 +17,8 @@
     </ul>
 </div>
 
+
+<a href="/new/records">Create a new report</a><br>
 <div class="grid-container">
     <ul>
         <% @reports.each do |reports| %>
