--- a/views/Manager/index.erb
+++ b/views/Manager/index.erb
@@ -3,15 +3,27 @@
 <div class="grid-container">
     <ul>
         <% @clients.each do |client| %>
-            <p><b>Company: </b><%= client["name"] %><b> Address: </b><%= client["address"] %></p>
+            <li>
+                <p><b>Company: </b><%= client["name"] %><b> Address: </b><%= client["address"] %></p>
+            </li>
         <% end %>
     </ul>
 </div>
 
+
+<a href="/new/records">Create a new report</a><br>
 <div class="grid-container">
     <ul>
         <% @reports.each do |reports| %>
-            <p><b>Date: </b><%= reports["date"] %><b> User Id: </b><%= reports["user_id"] %><b> Client Id: </b><%= reports["client_id"] %><b> Report: </b><%= reports["report"] %></p>
+            <li>
+                <p><b>Date: </b><%= reports["date"] %><b> Author: </b><%= reports["name"] %><b> Company: </b><%= reports["company_name"] %><b> Report: </b><%= reports["report"] %></p>
+                <form action="/records" method="post">
+                    <input type="hidden" name="_method" value="delete">
+                    <input type="hidden" name="report_id" value=<%= reports["id"] %>>
+                    <button>delete</button>
+                </form>
+                <a href="/records/<%= reports['id'] %>/edit">edit</a>
+            </li>
         <% end %>
     </ul>
 </div>
