--- a/views/new_records.erb
+++ b/views/new_records.erb
@@ -1,16 +1,30 @@
-<h1>This is the New record file for Managers & IT</h1>
+<h2>This is the New record file for Managers & IT</h2>
 
     
 
 
 <form action="/new/records" method="post">
     <label for="">Company id: </label>
-    <input type="text" name="client_id">
+    <select name="client_id">
+            <% @clients.each do |client| %>
+                <option value="<%= client['id'] %>"><%= client['company_name']%></option>
+            <% end %>
+        </select>
     <label for="">Date: </label>
     <input type="text" name="date">
     <label for="">Report: </label>
     <input type="text" name="report">
-    <label for="">Author: </label>
-    <input type="text" name="user_id">
+    <% if (@user["role"] == "IT") || (@user["role"] == "Manager") %>
+        <select name="user_id">
+            <% @users.each do |user| %>
+                <option value="<%= user['id'] %>"><%= user['name']%></option>
+            <% end %>
+        </select>
+    <% else %>
+        <input type="hidden" name="user_id" value="<%= @user['id'] %>">
+        <label for="">Author: <%= @user["name"] %></label>
+    <% end %>
     <button>create</button>
 </form>
+
+
